syntax = "proto3";
package task.service.v1;
option go_package = "ms-project/pkg/service/task_service.v1";


message TaskReqMessage{
  string projectCode = 1;
  int64 page = 2;
  int64 pageSize = 3;
  int64 memberId = 4;
}
message TaskStagesMessage{
  string code = 1;
  string name = 2;
  string projectCode = 3;
  int32 sort = 4;
  string description = 5;
  string createTime = 6;
  int32 deleted = 7;
  int32 id = 8;
}
message TaskStagesResponse{
  int64 total = 1;
  repeated TaskStagesMessage list = 2;
}
message MemberProjectMessage{
  string name = 1;
  string avatar = 2;
  int64 memberCode = 3;
  string code = 4;
  string email = 5;
  int32 isOwner = 6;
}
message MemberProjectResponse{
  int64 total = 1;
  repeated MemberProjectMessage list = 2;
}
service TaskService {
  rpc TaskStages(TaskReqMessage) returns (TaskStagesResponse){}
  rpc MemberProjectList(TaskReqMessage) returns (MemberProjectResponse){}
}